Update Channel library
Signed-off-by: Jeff Mesnil <jmesnil@redhat.com>